--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999698507993-speech-language-pathologist-central-management-office'>Uplift Education Speech Language Pathologist: Central Management Office | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999698507993-speech-language-pathologist-central-management-office'>Uplift Education Speech Language Pathologist: Central Management Office | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light">Columbia, MS</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999698307093-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999698307093-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
+<h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
 <p><span class="badge badge-light">Rockford Rockford</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -270,7 +270,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999693868522-pedatric-physical-therapists-medical-facility-part-time-or-full-time'>Hearing and Speech Center of Florida Pedatric Physical Therapists-Medical Facility Part Time or Full TIME | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999693868522-pedatric-physical-therapists-medical-facility-part-time-or-full-time'>Hearing and Speech Center of Florida Pedatric Physical Therapists-Medical Facility Part Time or Full TIME | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -313,7 +313,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">SAN ANTONIO, TEXAS</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/valleyhealth/job/okCgbfw7'>Valley Health Careers - Speech Pathologist I</a></h5> 
+<h5><a href='https://jobs.jobvite.com/valleyhealth/job/okCgbfw7'>Valley Health Careers - Speech Pathologist I</a></h5> 
 <p><span class="badge badge-light">Woodstock, Virginia</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -333,7 +333,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/ctc/job/gscsj549rdacs1ktpyjur7meoo'>Cherokee County - Speech Language Pathologist | CTC Careers</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/ctc/job/gscsj549rdacs1ktpyjur7meoo'>Cherokee County - Speech Language Pathologist | CTC Careers</a></h5> 
 <p><span class="badge badge-light">Canton, GA</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -365,7 +365,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">Jefferson City, MO, USA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999697182977-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999697182977-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Columbia, MO, USA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -441,7 +441,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4463525002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4463525002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Montgomery</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
